src/test/deca/codegen/valid/created/var2.deca
// Description:
//    teste un appel vide a print
// Resultats:
//    10

{
    int a = 10;
    int b = 2;
    b = a;
    println(b);
}