src/test/deca/codegen/invalid/created/ArithmeticExp.deca
// Resultats :
//    Erreur generation code
//    Ligne 6 : Division by 0

{
    print(2/0);
}